# keyboard-suggest

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  meson.build
.github/workflows/: CI.yml
include/: crow_all.h  matrix.h  messages.h  state.h
include/details/: app.h  bug.h  cell.h  http_service.h  matrix.h  world.h  world_map.h
include/server/: config.h.in  httpd.h  meson.build
keyboard-front/: package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
keyboard-front/src/routes/: +layout.svelte  +page.svelte
misc/viewer/: index.html  render.js
sandbox/: meson.build
scripts/: build.sh  coverage.sh  setup-all.sh
sources/: main.cpp  meson.build  messages.cpp
sources/details/: app.cpp  bug.cpp  cell.cpp  http_service.cpp  world.cpp  world_map.cpp
sources/server/: httpd.cpp
static/: index.html
static/_app/: version.json
static/_app/immutable/assets/: 0.870a0585.css  _layout.d25ce14f.css
static/_app/immutable/chunks/: index.d533344a.js  scheduler.703bbf2d.js  singletons.254fd711.js
static/_app/immutable/entry/: app.f5f06af7.js  start.8cbcefed.js
static/_app/immutable/nodes/: 0.39b91492.js  1.19f2a494.js  2.9e53ea38.js
tests/: matrix_ut.cpp  meson.build
